--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
             '1.png', 
             '2.png',
             '3.png',
-            '4.png'
+            '4.png',
+            '5.png',
+            '6.png',
+            '7.png',
+            '8.png'
         ];
         
         let currentPageIndex = 0;
@@ -129,4 +133,5 @@
         updateButtons();
     </script>
 </body>
+
 </html>
