--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
             '5.png',
             '6.png',
             '7.png',
-            '8.png'
+            '8.png',
+            '9.png',
+            '10.png',
+            '11.png',
         ];
         
         let currentPageIndex = 0;
@@ -135,3 +138,4 @@
 </body>
 
 </html>
+
