--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             '8.png',
             '9.png',
             '10.png',
-            '11.png',
+            '11.png'
         ];
         
         let currentPageIndex = 0;
@@ -138,4 +138,5 @@
 </body>
 
 </html>
+
 
